<resources>
    <string name="app_name">Seafood App</string>
    <string name="action_settings">Settings</string>
    <string name="delegate_reg">Delegate Registration</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_inqrcode">Scan Delegate Code</string>
    <string name="stall_reg">Stall Registration</string>
    <string name="reg_fee">Registration Fee</string>
    <string name="numregfee">12,500.00</string>
    <string name="strgst">GST@18%</string>
    <string name="numgstfee">2,250.00</string>
    <string name="strtotal">Total</string>
    <string name="numtotal">14,750.00</string>
    <string name="strdelgatehint">Name of Delegate<font color='#FF0000'>*</font></string>
    <string name="strdesignation">Designation <font color='#FF0000'>*</font></string>
    <string name="strcompanyname">Name of Company <font color='#FF0000'>*</font></string>
    <string name="Strcompanynamenew">Company</string>
    <string name="Stremailnew">Email</string>
    <string name="straddress">Address <font color='#FF0000'>*</font></string>
    <string name="strcity">City <font color='#FF0000'>*</font></string>
    <string name="strzipcode">Zip/Pin Code <font color='#FF0000'>*</font></string>
    <string name="strCountry">Country <font color='#FF0000'>*</font></string>
    <string name="strstate">State <font color='#FF0000'>*</font></string>
    <string name="strtelephone">Telephone</string>
    <string name="strfax">Fax</string>
    <string name="strmobile">Mobile <font color='#FF0000'>*</font></string>
    <string name="stremailid">Email ID<font color='#FF0000'>*</font></string>
    <string name="strgstno">GST NO <font color='#FF0000'>*</font></string>
    <string name="strproduct">Products and Services</string>
    <string name="strrawspace">Raw Space</string>
    <string name="strselectcat">Select Category <font color='#FF0000'>*</font></string>
    <string name="strotherspecify">If Other, Specify</string>
    <string name="strdelregdetail">Delegate Details</string>
    <string name="strdelgatename">Name of Delegate <font color='#FF0000'>*</font></string>
    <string name="strdesgination">Designation <font color='#FF0000'>*</font></string>
    <string name="strdesnew">Designation</string>
    <string name="strPhone">Phone/Mobile <font color='#FF0000'>*</font></string>
    <string name="Strphonenew">Phone</string>
    <string name="strfeegst">Fee and GST\t\t\tRs 14,750.0</string>
    <string name="strtotalpayableamt">Total Payable Amount</string>
    <string name="strnewdelegate">Add New Delegate</string>
    <string name="strmakepayment">Make Payment</string>
    <string name="showvenue">Venue</string>
    <string name="access_code">Access Code</string>
    <string name="pay_button">Pay</string>
    <string name="merchant_id">Merchant Id</string>
    <string name="currency">Currency</string>
    <string name="amount">Amount</string>
    <string name="redirect_url">Redirect Url</string>
    <string name="cancel_url">Cancel Url</string>
    <string name="strshellscheme">Shell Scheme</string>
    <string name="strregmemeber">MPEDA/SEAI Registered Member</string>
    <string name="strentermpeda">Please enter your MPEDA/SEAI number validity</string>
    <string name="strregmemmpeda">Registered Member of MPEDA.\n
        Give MPEDA Registration Number and Validity <font color='#FF0000'>*</font></string>
    <string name="strregseai">Registered Member of SEAI.\n
        Give SEAI Registration Number and Validity <font color='#FF0000'>*</font></string>
    <string name="otherreqspecify">Other Specify</string>
    <string name="strmpedaregnumber">MPEDA Registration Number</string>
    <string name="strseairegnumber">SEAI Registration Number</string>
    <string name="strdateformat">YYYY-MM-DD</string>
    <string name="chknovalidity">Check Number and Validitiy</string>
    <string name="strmpeda">MPEDA</string>
    <string name="strseai">SEAI</string>
    <string name="rsa_url">RSA Key Url</string>
    <string name="strbookmeeting">Book a meeting Room</string>
    <string name="str_training">Technical\nSession</string>
    <string name="str_feedback">Feedback</string>
    <string name="abtiss2023">About IISS 2023</string>
    <string name="abtiss">The 23rd Edition being held from 15th – 17th February, 2023 at Biswa Bangla Mela Prangan, Kolkata, West Bengal, India –promises to be even bigger and better in terms of size and participation. IISS 2023 will showcase Domestic and Overseas Participants, in terms of Stalls, Delegates and Trade Visitors in a scenic and natural ambience.\n


        The Show will highlight India’s commitment towards safe and sustainable seafood production for export.\n

Meet face to face with seafood buyers across the world, discover new business relationships, and increase your sales/exports at one of Asia’s largest Seafood Exposition. Participate and Meet with top Seafood Buyers from Retail and Food Service Industries, Network with Wholesalers, Distributors, Importers and Exporters making business in India, a truly global experience.</string>
    <string name="jointlyorganized">Jointly Organized By</string>
    <string name="abtimpedia">THE MARINE PRODUCTS EXPORT\nDEVELOPMENT AUTHORITY\n(Ministry of Commerce and Industry, Government of India)\nMPEDA House, Panampilly Nagar\nP.B, 4272, Kochi – 682036, Kerala, India\nTel : +91 484 2321722
\nFax : +91 484 2312812
\nE-mail : iiss@mpeda.gov.in
\nWebsite : www.mpeda.gov.in </string>
    <string name="seafoodexporters">THE SEAFOOD EXPORTERS\nASSOCIATION OF INDIA\nSeafood House,\nWillingdon Island\nKochi – 682 003, Kerala, India\nTel : +91 484 2666572\nFax : +91 484 2312812\nE-mail : seaihq@gmail.com\nWebsite : www.seai.in\n</string>
    <string name="strdisplay">See Layout</string>
    <string name="add_stall">Add Stall</string>
    <string name="submit_text">Submit</string>
    <string name="stalldetail">Stall Delegate Details</string>
    <string name="strEmail">Email <font color='#FF0000'>*</font></string>
    <string name="barcode_value">Barcode Value: %1$s</string>
    <string name="contactofficeone">HEAD OFFICE</string>
    <string name="contactone"><b>The Marine Products Export Development Authority,</b>\n
MPEDA House,\n
P.B.No.4272,\n
Panampilly Avenue,\n
Panampilly Nagar P.O,\n
Kochi – 682 036,\n
KERALA.\n
<b>E-mail:</b> ho@mpeda.gov.in\n
<b>Website:</b> www.mpeda.gov.in\n
<b>Phone:</b> 91 484 2311901,91 484 2311854,91 484 2311803,91 484 2313415,\n

<b>Fax:</b> 91 484 2313361</string>
    <string name="contactofficetwo">REGIONAL DIVISIONS</string>
    <string name="contacttwo"><b>RD KOCHI</b>\n
The Marine Products Export Development Authority\n
Regional Division\n
MPEDA House, 4th Floor, Panampilly Avenue,\n
Panampilly Nagar P.O, Kochi – 682 036,\n
KERALA.\n
E-mail: ro.koc@mpeda.gov.in\n
Tel: + 91 484 2323245\n
+ 91 484 2321725\n
E-mail: rc.koc@mpeda.gov.in\n
Mr. Johnson D’cruz – Deputy Director\n
Mob: +91 94004 50074</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="termsandconditions"><b>Terms and Conditions for Exhibitors</b></string>
    <string name="conditionone"><b>1.</b> 23rd India International Seafood Show 2023 will be organized in Biswa Bangla Mela Prangan, Kolkata,\n India from 15th - 17th February 2023.</string>
    <string name="conditiontwo"><b>2.</b> The Exhibitors shall adhere to the exhibition manual (Available on Website: www.indianseafoodexpo.com).</string>
    <string name="conditionthree"><b>3.</b> Exhibitor may book any number of stalls. Stalls will be allotted on a first-come-first served basis.</string>
    <string name="conditionfour"><b>4.</b> GST applicable will be additional to the fees mentioned. For the stall registration within Kolkata, the GST should be in SGST (9%) &amp; CGST (9%), whereas for the stalls outside Kolkata, it should be IGST (18%).</string>
    <string name="conditionfive"><b>5.</b> Fee once paid will not be refunded.</string>
    <string name="conditionsix"><b>6.</b> The Organizers will provide standard fascia with company name for shell scheme.</string>
    <string name="conditionseven"><b>7.</b> 2 free exhibitor passes will be provided per 9 sq m stall booked.</string>
    <string name="conditioneight"><b>8.</b> For each 3X3 m shell scheme stall, one counter table, one round table, 3 chairs, one power outlet, (5A, 230 V), three spot lights and one waste basket.</string>
    <string name="conditionnine"><b>9.</b> 25 free passes for one time entry will be provided to each exhibitor.</string>
    <string name="conditionten"><b>10.</b> Exhibitors opting for raw space need to inform the Organizers by 10th January 2023 along with a layout plan for approval.</string>
    <string name="condition11"><b>11.</b> Exhibitor can order additional furniture/other items/ additional electricity requirements directly with the official stall contractor. Extra charges apply for additional requirements.</string>
    <string name="condition12"><b>12.</b> For raw space the stall will behanded over to the Exhibitors on 12/02/2023 at 10.00am and for shell scheme the stall will behanded over to Exhibitor on 14/02/2023 by 10:00 am.</string>
    <string name="condition13"><b>13.</b> Heavy machinery for display needs to be placed inside before 12 PM on 11/02/2023.</string>
    <string name="condition14"><b>14.</b> Furnishing of stall shall be completed and all materials that are not for use should be removed by 18.00 hrs on 14/02/2023.</string>
    <string name="condition15"><b>15.</b> The name of the Exhibit or registered on or before 20th January 2023 only will be published in the show catalogue.</string>
    <string name="condition16"><b>16.</b> Show Timings: 10:00am-06:00pm (15th&amp;16th February) 10:00am-04:00pm(17thFebruary).</string>
    <string name="condition17"><b>17.</b> Stall Delegates are entitled to participate in the technical sessions arranged by the Organizers.</string>
    <string name="condition18"><b>18.</b> Exhibitors should participate in the show without causing any disturbance to neighboring stalls.</string>
    <string name="condition19"><b>19.</b> Any cultural performance within the booth is to be limited within the scope of the show, that too with the prior permission from the organizer.</string>
    <string name="condition20"><b>20.</b> Confirmation of Stall reservations will be sent by E-mail.</string>
    <string name="condition21"><b>21.</b> Though the fair authorities will be providing general security, the fair authorities will not be responsible for any damage/loss of any article/property kept in the stall.</string>
    <string name="condition22"><b>22.</b> All products shall be exhibited only with in the stall.</string>
    <string name="condition23"><b>23.</b> The Organizers reserve the right to make such changes in stall position, site layout, floor plan and other details as they consider fit in the overall interest and safety precautions of the exhibition and adhering to the norms of the Local Governing body.</string>
    <string name="condition24"><b>24.</b> The Exhibitor shall be liable to pay for any damages caused to the stall or equipment allotted to him. Any such damages shall be assessed by the Organizers and their decision on the charges to be paid by the Exhibitor shall be final.</string>
    <string name="condition25"><b>25.</b> Jurisdiction in any case of dispute will be Ernakulam, Kerala, India.</string>
</resources>