<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="176dp"
        android:background="@android:color/white"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:contentDescription="@string/nav_header_desc"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:src="@drawable/ironman" />

        <LinearLayout
            android:id="@+id/name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/user_headerf_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:fontFamily="montserrat/Montserrat-Medium.otf"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:text="@string/nav_header_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/user_headerl_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="montserrat/Montserrat-Medium.otf"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:text="@string/nav_header_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        </LinearLayout>


        <TextView
            android:id="@+id/textView_gmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name_layout"
            android:layout_marginLeft="20dp"
            android:text="@string/nav_header_subtitle" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
           android:id="@+id/nav_sigin_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:text="Sign In"
            android:textColor="@color/color_silver"
            android:textSize="20dp"></TextView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.2dp"
            android:background="@android:color/black"></View>

        <TextView
            android:id="@+id/nav_my_accnt_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:text="My Account"
            android:textColor="@color/color_silver"
            android:textSize="20dp"></TextView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.2dp"
            android:background="@android:color/black"></View>

        <TextView
            android:id="@+id/nav_seminar_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:text="Seminar List"
            android:textColor="@color/color_silver"
            android:textSize="20dp"></TextView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.2dp"
            android:background="@android:color/black"></View>

        <TextView
            android:id="@+id/nav_leads_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:text="Leads"
            android:textColor="@color/color_silver"
            android:textSize="20dp"></TextView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.2dp"
            android:background="@android:color/black"></View>


    </LinearLayout>



</LinearLayout>
